# tabdiff

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
demo/: README.md  demo.tape  gen-data.py
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
src/: filter.rs  hash.rs  input.rs  lib.rs  main.rs  rename.rs  report.rs  row_diff.rs  schema_diff.rs  sort.rs  value.rs
testdata/: dup.csv  events_left.csv  events_right.csv  left.csv  rename_left.csv  rename_right.csv  right.csv
tests/: integration.rs
