[workspace]
members = ["python"]

[package]
name = "tabdiff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
arrow = { version = "59.0.0", features = ["csv"] }
clap = { version = "4.6.1", features = ["derive"] }
parquet = { version = "59.0.0", features = ["arrow"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
twox-hash = "2.1.2"
