[workspace]
members = ["python"]

[package]
name = "tabdiff"
version = "0.1.0"
edition = "2024"
description = "Semantic diff for CSV and Parquet tables: key-matched, type-aware, larger-than-RAM"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["diff", "csv", "parquet", "data", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.103"
arrow = { version = "59.0.0", features = ["csv"] }
clap = { version = "4.6.1", features = ["derive"] }
parquet = { version = "59.0.0", features = ["arrow"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
twox-hash = "2.1.2"
