[package]
name = "tabdiff-py"
version = "0.1.0"
edition = "2024"
description = "Python bindings for tabdiff"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "tabdiff_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
tabdiff = { path = ".." }
