[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "tabdiff"
description = "Semantic diff for CSV and Parquet tables"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
]

[tool.maturin]
module-name = "tabdiff"
